blueshield job timer

--- a/Resources/Prototypes/Roles/play_time_trackers.yml
+++ b/Resources/Prototypes/Roles/play_time_trackers.yml
@@ -17,6 +17,9 @@
   id: JobBotanist
 
 - type: playTimeTracker
+  id: JobBlueshield
+
+- type: playTimeTracker
   id: JobCaptain
 
 - type: playTimeTracker
