--- a/Resources/Prototypes/StatusEffects/job.yml
+++ b/Resources/Prototypes/StatusEffects/job.yml
@@ -17,6 +17,13 @@
   id: JobIconQuarterMaster
   icon:
     sprite: /Textures/Interface/Misc/job_icons.rsi
+    state: Blueshield
+
+- type: statusIcon
+  parent: JobIcon
+  id: JobIconQuarterMaster
+  icon:
+    sprite: /Textures/Interface/Misc/job_icons.rsi
     state: QuarterMaster
 
 - type: statusIcon
