--- a/Resources/Prototypes/Reagents/fun.yml
+++ b/Resources/Prototypes/Reagents/fun.yml
@@ -369,7 +369,7 @@
             min: 50
         damage:
           types:
-            Poison: 1
+            Poison: 5
       - !type:AdjustReagent
         conditions:
         - !type:ReagentThreshold
@@ -406,8 +406,9 @@
             max: 50 # you've got a chance to get out of crit
           damage: # heals at the same rate as tricordrazine, doesn't heal poison because if you OD'd I'm not giving you a safety net
             groups:
-              Burn: -1
-              Brute: -1
-              Radiation: -1
-              Slash: -1
-              Piercing: -1
+              Brute: -2
+              Airloss: -3
+              Burn: -2
+              Toxin: -3
+            types: 
+              Radiation: -3
