--- a/Resources/Prototypes/StatusEffects/job.yml
+++ b/Resources/Prototypes/StatusEffects/job.yml
@@ -14,7 +14,7 @@
 
 - type: statusIcon
   parent: JobIcon
-  id: JobIconQuarterMaster
+  id: JobIconBlueshield #Evin
   icon:
     sprite: /Textures/Interface/Misc/job_icons.rsi
     state: Blueshield
