added to loadouts

--- a/Resources/Prototypes/Loadouts/Jobs/Engineering/chief_engineer.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Engineering/chief_engineer.yml
@@ -49,6 +49,10 @@
   id: ChiefEngineerBeret
   equipment: EngineeringBeret
 
+- type: loadout
+  id: ChiefEngineerBeretNew
+  equipment: ClothingHeadHatBeretChiefEngineer
+
 # Neck
 - type: loadout
   id: ChiefEngineerCloak
