--- a/Resources/Prototypes/Loadouts/Jobs/Medical/paramedic.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Medical/paramedic.yml
@@ -10,7 +10,8 @@
 
 - type: startingGear
   id: ParamedicBeret
-  equipment: ClothingHeadHatBeretParamedic
+  equipment: 
+    head: ClothingHeadHatBeretParamedic
 
 # Jumpsuit
 - type: loadout
