Добавление PNV в изучении, так же в покупку у Агентов/ЯО

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -366,6 +366,7 @@
       - SpeedLoaderMagnumUranium
       - TelescopicShield
       - Truncheon
+      - ClothingEyesVision
       - WeaponAdvancedLaser
       - WeaponLaserCannon
       - WeaponLaserCarbine
@@ -788,6 +789,7 @@
       - Truncheon
       - VoiceTrigger
       - WeaponAdvancedLaser
+      - ClothingEyesVision
       - WeaponDisabler
       - WeaponDisablerSMG
       - WeaponLaserCannon
