--- a/Resources/Prototypes/Research/arsenal.yml
+++ b/Resources/Prototypes/Research/arsenal.yml
@@ -130,6 +130,18 @@
   - WeaponLaserCannon
 
 - type: technology
+  id: WeaponiPNVManipulation
+  name: research-technology-weaponized-PNV-manipulation
+  icon:
+    sprite: /Textures/Clothing/Eyes/Glasses/ninjavisor.rsi
+    state: icon
+  discipline: Arsenal
+  tier: 2
+  cost: 10000
+  recipeUnlocks:
+  - ClothingEyesVision
+  
+- type: technology
   id: WaveParticleHarnessing
   name: research-technology-wave-particle-harnessing
   icon:
