--- a/Resources/Prototypes/Access/command.yml
+++ b/Resources/Prototypes/Access/command.yml
@@ -10,6 +10,10 @@
   id: HeadOfPersonnel
   name: id-card-access-level-head-of-personnel
 
+- type: accessLevel
+  id:  Blueshield
+  name: id-card-access-level-blueshield
+
 - type: accessGroup
   id: Command
   tags:
