--- a/Resources/Prototypes/Maps/debug.yml
+++ b/Resources/Prototypes/Maps/debug.yml
@@ -31,6 +31,7 @@
           - Captain
           availableJobs:
             Captain: [ -1, -1 ]
+            Blueshield: [ -1, -1 ]
 
 - type: gameMap
   id: TestTeg
