--- a/Resources/Prototypes/Roles/Jobs/Command/blueshield.yml
+++ b/Resources/Prototypes/Roles/Jobs/Command/blueshield.yml
@@ -43,11 +43,10 @@
     back: ClothingBackpackERTLeader
     shoes: ClothingShoesBootsCombatFilled #Лучше стандартных.
     eyes: ClothingEyesGlassesBlueshield
+    gloves: ClothingHandsGlovesCombat
     outerClothing: ClothingOuterArmorBulletproof
     id: BlueshieldPDA
     ears: ClothingHeadsetAltCommand
     pocket1: CrowbarRed #Как блять оно сюда попало?
     pocket2: WeaponRevolverMateba
     belt: ClothingBeltSecurityFilled
-  satchel: ClothingBackpackSatchelFilled
-  duffelbag: ClothingBackpackDuffelFilled
