--- a/Resources/Prototypes/Roles/Jobs/Command/blueshield.yml
+++ b/Resources/Prototypes/Roles/Jobs/Command/blueshield.yml
@@ -9,7 +9,7 @@
     department: Security
     time: 100000 # Corvax-RoleTime
   startingGear: BlueshieldGear
-  icon: "Blueshield"
+  icon: "JobIconBlueshield"
   supervisors: job-supervisors-centcom
   canBeAntag: false
   access:
