--- a/Resources/Prototypes/Roles/Jobs/departments.yml
+++ b/Resources/Prototypes/Roles/Jobs/departments.yml
@@ -38,6 +38,7 @@
   color: "#334E6D"
   roles:
   - Captain
+  - Blueshield #Evin
   - IAA # Corvax-IAA
   - CentralCommandOfficial
   - ChiefEngineer
