Интегрированные ПНВ очки в шлема ОБР и Научного Руководителя

--- a/Resources/Prototypes/Entities/Clothing/Head/hardsuit-helmets.yml
+++ b/Resources/Prototypes/Entities/Clothing/Head/hardsuit-helmets.yml
@@ -302,6 +302,7 @@
   - type: PressureProtection
     highPressureMultiplier: 0.60
     lowPressureMultiplier: 1000
+  - type: PNV
 
 #Head of Security's hardsuit
 - type: entity
@@ -574,6 +575,7 @@
         Slash: 0.9
         Piercing: 0.9
         Heat: 0.9
+  - type: PNV
 
 #ERT Chaplain Hardsuit
 - type: entity
@@ -589,6 +591,7 @@
     sprite: Clothing/Head/Hardsuits/ERThelmets/ertchaplain.rsi
   - type: PointLight
     color: "#ffffff"
+  - type: PNV
 
 #ERT Engineer Hardsuit
 - type: entity
@@ -611,6 +614,7 @@
         Slash: 0.9
         Piercing: 0.9
         Heat: 0.9
+  - type: PNV
 
 #ERT Medical Hardsuit
 - type: entity
@@ -626,6 +630,7 @@
     sprite: Clothing/Head/Hardsuits/ERThelmets/ertmedical.rsi
   - type: PointLight
     color: "#adffec"
+  - type: PNV
 
 #ERT Security Hardsuit
 - type: entity
@@ -648,6 +653,7 @@
         Slash: 0.9
         Piercing: 0.9
         Heat: 0.9
+  - type: PNV
 
 #ERT Janitor Hardsuit
 - type: entity
@@ -663,6 +669,7 @@
     sprite: Clothing/Head/Hardsuits/ERThelmets/ertjanitor.rsi
   - type: PointLight
     color: "#cbadff"
+  - type: PNV
 
 #CBURN Hardsuit
 - type: entity
@@ -717,6 +724,7 @@
     sprite: Clothing/Head/Hardsuits/deathsquad.rsi
   - type: PointLight # Corvax-Resprite
     color: cyan
+  - type: PNV
   - type: PressureProtection
     highPressureMultiplier: 0.08
     lowPressureMultiplier: 1000
