--- a/Resources/Prototypes/_Evin/Maps/evinpacked.yml
+++ b/Resources/Prototypes/_Evin/Maps/evinpacked.yml
@@ -1,7 +1,7 @@
 - type: gameMap
   id: EvinPacked
   mapName: 'Packed'
-  mapPath: /Maps/evinpacked.yml
+  mapPath: /Maps/EvinPacked.yml
   minPlayers: 0
   maxPlayers: 40
   stations:
