--- a/Resources/Prototypes/_Evin/Maps/pool/default.yml
+++ b/Resources/Prototypes/_Evin/Maps/pool/default.yml
@@ -3,8 +3,8 @@
   maps:
   - EvinDelta
   - EvinSilly
-  - Pilgrim
-  - EvinAtlas
+  - CorvaxPilgrim
+  - Atlas
   - EvinBagel
   - EvinBox
   - EvinCluster
