--- a/Resources/Prototypes/Roles/Jobs/Fun/misc_startinggear.yml
+++ b/Resources/Prototypes/Roles/Jobs/Fun/misc_startinggear.yml
@@ -37,7 +37,7 @@
     - JetpackBlackFilled
 
 #Deathsquad Outfit
-- type: startingGear
+- type: startingGear #Evin
   id: DeathSquadGear
   equipment:
     jumpsuit: ClothingUniformJumpsuitDeathSquad
