--- a/Resources/Prototypes/_Evin/Maps/pool/default.yml
+++ b/Resources/Prototypes/_Evin/Maps/pool/default.yml
@@ -1,19 +1,12 @@
 - type: gameMapPool
   id: EvinDefaultMapPool
   maps:
-  - CorvaxDelta
-  - CorvaxSilly
-  - CorvaxPilgrim
-  - Atlas
-  - Bagel
-  - Box
-  - Cluster
-  - Core
-  - Fland
-  - Marathon
-  - Meta
-  - Omega
-  - Origin
-  - Saltern
-  - Packed
-  - Reach
+  - EvinDelta
+  - EvinSilly
+  - EvinBagel
+  - EvinBox
+  - EvinCluster
+  - EvinCore
+  - EvinOmega
+  - EvinOrigin
+  - EvinSaltern
