ой блин ваще какой я молодец
как же хорошо что есть тесты на гите, а)))

--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Boxes/magnum.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Boxes/magnum.yml
@@ -54,7 +54,7 @@
     - state: practice
 
 - type: entity
-  id: MagazineBoxMagnumIncendiary
+  id: MagazineBoxMagnumAP
   parent: BaseMagazineBoxMagnum
   name: ammunition box (.45 magnum incendiary)
   components:
