--- a/Resources/Prototypes/Catalog/Jukebox/Standard.yml
+++ b/Resources/Prototypes/Catalog/Jukebox/Standard.yml
@@ -11,6 +11,12 @@
     path: /Audio/Jukebox/title3.ogg
 
 - type: jukebox
+  id: Rainy
+  name: The Fire Is Gone
+  path:
+    path: /Audio/Jukebox/Rainy-evening.ogg
+
+- type: jukebox
   id: Thunderdome
   name: MashedByMachines - Sector 11
   path:
@@ -40,8 +46,3 @@
   path:
     path: /Audio/Jukebox/sunset.ogg
 
-- type: jukebox
-  id: Mirror
-  name: Set It Off - Killer In The Mirror
-  path:
-    path: /Audio/Jukebox/Mirror.ogg
