--- a/Resources/Prototypes/Recipes/Construction/Graphs/structures/girder.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/structures/girder.yml
@@ -50,6 +50,17 @@
               amount: 2
               doAfter: 2
 
+        - to: woodWall
+          completed:
+            - !type:SnapToGrid
+              southRotation: true
+          conditions:
+            - !type:EntityAnchored {}
+          steps:
+            - material: WoodPlank
+              amount: 2
+              doAfter: 2
+
         - to: reinforcedGirder
           completed:
             - !type:SnapToGrid
@@ -159,6 +170,18 @@
             - material: Steel
               amount: 2
               doAfter: 1
+
+    - node: woodWall
+      entity: WallWood
+      edges:
+        - to: girder
+          completed:
+            - !type:GivePrototype
+              prototype: MaterialWoodPlank1
+              amount: 2
+          steps:
+            - tool: Prying
+              doAfter: 10
 
     - node: wall
       entity: WallSolid
