debuff крыс, уменьшена кровь получаемая от них. Во избежание абуза с бесконечной едой.

--- a/Resources/Prototypes/Entities/Mobs/NPCs/regalrat.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/regalrat.yml
@@ -198,6 +198,8 @@
     - map: [ "enum.DamageStateVisualLayers.BaseUnshaded"]
       state: eyes
       shader: unshaded
+    - type: Bloodstream
+    bloodMaxVolume: 40 #Evin debuff blood
 
   - type: SpriteMovement
     movementLayers:
