--- a/Resources/Prototypes/Recipes/Reactions/fun.yml
+++ b/Resources/Prototypes/Recipes/Reactions/fun.yml
@@ -89,6 +89,18 @@
       amount: 1
     Zinc:
       amount: 1
+# evin danger chemst
+  effects:
+    - !type:EmpReactionEffect
+      rangePerUnit: 0.2
+      maxRange: 2
+      energyConsumption: 5000
+      duration: 10
+    - !type:PopupMessage
+     visualType: LargeCaution
+     messages: [ "impuls-liko-created" ]
+     type: Pvs
+# evin danger chemst
   products:
     Licoxide: 1
 
