--- a/Resources/Prototypes/Objectives/objectiveGroups.yml
+++ b/Resources/Prototypes/Objectives/objectiveGroups.yml
@@ -53,7 +53,7 @@
   id: ThiefBigObjectiveGroups
   weights:
     ThiefObjectiveGroupStructure: 0 #Temporarily disabled until obvious ways to steal structures are added
-    ThiefObjectiveGroupAnimal: 2
+#    ThiefObjectiveGroupAnimal: 2 # evin wtf wizard? Delete thief objective animals
 
 - type: weightedRandom
   id: ThiefObjectiveGroupCollection
