Обновление станции ЦентКом. Теперь там полностью рабочее Карго, шаттлы, экспедиции и система обломком для утилизаторов. Ну и конечно же добавлена система спавнов.

--- a/Resources/Prototypes/Entities/Stations/nanotrasen.yml
+++ b/Resources/Prototypes/Entities/Stations/nanotrasen.yml
@@ -36,6 +36,12 @@
     - BaseStation
     - BaseStationAlertLevels
     - BaseStationNanotrasen
+    - BaseStationCargo #evin
+    - BaseStationJobsSpawning #evin
+    - BaseStationRecords #evin
+    - BaseStationShuttles #evin
+    - BaseStationExpeditions #evin
+    - BaseStationMagnet #evin
   noSpawn: true
   components:
     - type: Transform
