--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -293,6 +293,7 @@
       - id: HoloprojectorSecurity
       - id: BookSecretDocuments
       - id: BookBusido # Corvax-Books
+      - id: WeaponTaserWeak
 
 - type: entity
   id: LockerHeadOfSecurityFilled
@@ -319,6 +320,7 @@
       - id: BoxEncryptionKeySecurity
       - id: HoloprojectorSecurity
       - id: BookSecretDocuments
+      - id: WeaponTaserWeak
 
 - type: entity
   id: LockerFreezerVaultFilled
