--- a/Resources/Prototypes/_Evin/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
+++ b/Resources/Prototypes/_Evin/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
@@ -37,3 +37,46 @@
     steps: 5
     zeroVisible: true
   - type: Appearance
+
+- type: entity
+  name: X-01 мультифазовый энергетический пистолет #by hiucko
+  parent: BaseWeaponBatterySmall
+  id: WeaponLaserHos
+  description: Энергетический пистолет с несколькими режимами стрельбы.
+  components:
+  - type: Sprite
+    sprite: _Evin/Objects/Weapons/Guns/Battery/laser_hos.rsi
+    layers:
+    - state: base
+      map: ["enum.GunVisualLayers.Base"]
+    - state: mag-unshaded-4
+      map: ["enum.GunVisualLayers.MagUnshaded"]
+      shader: unshaded
+  - type: Gun
+    projectileSpeed: 25
+  - type: Item
+    size: Normal
+  - type: ProjectileBatteryAmmoProvider
+    proto: BulletDisabler
+    fireCost: 200
+  - type: BatteryWeaponFireModes
+    fireModes:
+    - proto: BulletOmnilaserOrangered
+      fireCost: 200
+    - proto: BulletDisabler
+      fireCost: 200
+    - proto: BulletTaserWeak
+      fireCost: 1000
+  - type: Battery
+    maxCharge: 3000
+    startingCharge: 3000
+  - type: MagazineVisuals
+    magState: mag
+    steps: 5
+    zeroVisible: true
+  - type: Appearance
+  - type: Tag
+    tags:
+    - HighRiskItem
+  - type: StaticPrice
+    price: 7500
