--- a/Resources/Prototypes/Entities/Objects/Misc/identification_cards.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/identification_cards.yml
@@ -581,6 +581,7 @@
     heldPrefix: blue
   - type: IdCard
     jobTitle: Centcom Agent
+    jobIcon: JobIconDeathsquad
 
 - type: entity
   name: passenger ID card
