--- a/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/backpack.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/backpack.yml
@@ -372,22 +372,22 @@
   components:
     - type: Storage
       grid:
-      - 0,0,7,6
+      - 0,0,8,7
     - type: StorageFill
       contents:
-        - id: BoxSurvivalEngineering
         - id: WeaponPulseRifle
         - id: WeaponPulsePistol
         - id: WeaponRevolverMateba
         - id: SpeedLoaderMagnumAP
         - id: SpeedLoaderMagnumAP
-        - id: BoxFlashbang
         - id: ToolDebug # spanish army knife
         - id: WelderExperimental
         - id: Hypospray
         - id: DeathAcidifierImplanter # crew will try to steal their amazing hardsuits
         - id: FreedomImplanter
-
+        - id: WeaponSubMachineGunVector
+        - id: MagazineMagnumSubMachineGunPiercing
+          amount: 2
 # Cargo
 
 - type: entity
