--- a/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/backpack.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/backpack.yml
@@ -388,6 +388,7 @@
         - id: WeaponSubMachineGunVector
         - id: MagazineMagnumSubMachineGunPiercing
           amount: 2
+        - id: DoorRemoteAll
 # Cargo
 
 - type: entity
