NanoTrasen DeMag - альтернатива Емагу синдиката. Но настроенная и адаптирована под нужды NanoTrasen.

--- a/Resources/Prototypes/Entities/Mobs/Player/dragon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/dragon.yml
@@ -138,6 +138,8 @@
     tags:
     - CannotSuicide
     - DoorBumpOpener
+  - type: NightVision
+    isToggle: true
 
 - type: entity
   parent: BaseMobDragon
