--- a/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/backpack.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/backpack.yml
@@ -214,7 +214,7 @@
       - id: BoxSurvival
       - id: Bible
       - id: RubberStampChaplain
-  
+
 - type: entity
   noSpawn: true
   parent: ClothingBackpack
@@ -275,6 +275,7 @@
         - id: BoxZiptie
         - id: CrowbarRed
         - id: MagazineMagnum
+        - id: Demag
 
 - type: entity
   noSpawn: true
@@ -315,6 +316,7 @@
       contents:
         - id: BoxSurvivalEngineering
         - id: trayScanner
+        - id: Demag
         - id: RCD
         - id: RCDAmmo
           amount: 2
@@ -381,7 +383,7 @@
         - id: WeaponRevolverMateba
         - id: SpeedLoaderMagnumAP
         - id: SpeedLoaderMagnumAP
-        - id: DoorRemoteAll
+        - id: Demag
         - id: ToolDebug
         - id: WelderExperimental
         - id: Hypospray
