added cargo order for sponsor plushies

--- a/Resources/Prototypes/Catalog/Fills/Crates/fun.yml
+++ b/Resources/Prototypes/Catalog/Fills/Crates/fun.yml
@@ -28,6 +28,9 @@
       - id: PlushieMoth
       - id: PlushieArachind
       - id: PlushiePenguin
+      - id: PlushieAvrelia
+      - id: PlushieLaura
+      - id: PlushieKraht
 
 - type: entity
   id: CrateFunLizardPlushieBulk
